// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderedList /> can have a list style 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  margin-left: -1rem;
  padding-left: 1rem;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  font-weight: 325;
}

.c4 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  font-weight: 325;
}

.c1 {
  padding-left: 3rem;
  list-style-type: decimal;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

<ol
  class="c0 c1 c0 c1 c2"
>
  <li
    class="c3"
  >
    <span
      class="c4"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="c3"
  >
    <span
      class="c4"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> can have a list style 2`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  margin-left: -1rem;
  padding-left: 1rem;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  font-weight: 325;
}

.c4 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  font-weight: 325;
}

.c5 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.c1 {
  padding-left: 3rem;
  list-style-type: upper-alpha;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

<ol
  class="c0 c1 c0 c1 c2"
>
  <li
    class="c3"
  >
    <span
      class="c4"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="c3"
  >
    <span
      class="c4"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;

exports[`<OrderedList /> renders 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c3 {
  margin-left: -1rem;
  padding-left: 1rem;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  font-weight: 325;
}

.c4 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  font-weight: 325;
}

.c1 {
  padding-left: 3rem;
  list-style-type: decimal;
}

.c1 {
  padding-left: 3rem;
}

.c1 .c0 {
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

<ol
  class="c0 c1 c0 c1 c2"
>
  <li
    class="c3"
  >
    <span
      class="c4"
    >
      Lorem ipsum
    </span>
  </li>
  <li
    class="c3"
  >
    <span
      class="c4"
    >
      Dolor sit amet
    </span>
  </li>
</ol>
`;
